syntax = "proto3";

service Greeter {
    rpc Hello(HelloRequest) returns (HelloResponse) {}
    rpc Goodbye(GoodbyeRequest) returns (GoodbyeResponse) {}
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string greeting = 1;
}

message GoodbyeRequest {
    string name = 1;
}

message GoodbyeResponse {
    string farewell = 1;
}